--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -34,12 +34,10 @@ jobs:
 #          tags: ${{ steps.meta.outputs.tags }}
 #          labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build and push
-        id: push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          platforms: linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Build and Push image
+        run: |
+            docker buildx build \
+            --file ./images/Containerfile \
+            --platform linux/arm64,linux/amd64\
+            --tag ${{ steps.meta.outputs.tags }}:${{ steps.meta.outputs.labels }} \
+            --push .
