--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Build and Push image
         run: |
             docker buildx build \
-            --file ./images/Containerfile \
+            --file Dockerfile \
             --platform linux/arm64,linux/amd64\
             --tag ${{ steps.meta.outputs.tags }}:${{ steps.meta.outputs.labels }} \
             --push .
