--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -39,5 +39,5 @@ jobs:
             docker buildx build \
             --file Dockerfile \
             --platform linux/arm64,linux/amd64\
-            --tag ${{ steps.meta.outputs.tags }}:${{ steps.meta.outputs.labels }} \
+            --tag ${{ steps.meta.outputs.tags }}:main \
             --push .
