feat: main push

--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Build and Push image
         run: |
             docker buildx build \
-            --file Dockerfile \
-            --platform linux/arm64,linux/amd64\
-            --tag ${{ steps.meta.outputs.tags }}:main \
-            --push .
+              --file Dockerfile \
+              --platform linux/arm64,linux/amd64\
+              --tag paidjkim/fastapi:main \
+              --push .
