--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -13,6 +13,16 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          install: true
+
+      - name: Create builder with docker-container driver
+        run: |
+          docker buildx create --use --name mybuilder --driver docker-container
+          docker buildx inspect --bootstrap
+
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
