feat: main push

--- a/k8s/hugging.yaml
+++ b/k8s/hugging.yaml
@@ -17,5 +17,6 @@ spec:
       containers:
         - name: mobile-net
           image: paidjkim/fastapi:main
+          imagePullPolicy: Always
           ports:
             - containerPort: 8000
